--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profilee.jpg" alt="Swathi profile picture" width="500" height="500" />
+        <img src="./assets/profilee.jpg" alt="luna profile picture" width="500" height="500" />
 
       </div>
       <div class="section__text">
@@ -50,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/resume.jpg')"
           >
             Download CV
           </button>
