--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profilee.jpg" alt="luna profile picture" width="100" height="100" />
+        <img src="./assets/profile1.jpg" alt="luna profile picture" width="0" height="0" />
 
       </div>
       <div class="section__text">
