--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Swathi</div>
+      <div class="logo">luna</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -40,7 +40,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile1.jpg" alt="luna profile picture" width="0" height="0" />
+        <img src="./assets/profile1.jpg" alt="luna profile picture"/>
 
       </div>
       <div class="section__text">
